change whatsapp link

--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
                 <div class="icon"><i class="fab fa-whatsapp"></i></div>
                 <a
                   style="text-decoration: none"
-                  href="https://www.facebook.com/yeisonomar.suarez/"
+                  href="https://wa.me/573115540543?text=Hola%20Yeison%20,%20me%20gustar%C3%ADa%20que%20nos%20reuni%C3%A9ramos"
                   target="_blank"
                 >
                   <span>WhatsApp 🔗</span>
