--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
           <div class="about-content">
             <div class="column left">
               <img
-                src="https://media-exp1.licdn.com/dms/image/C4E03AQGdKXVuwtFSAQ/profile-displayphoto-shrink_800_800/0/1590282621977?e=1631750400&v=beta&t=ekgQZDgKhz6XpVuQEtTQDEC3FQEAx05OnkHPyjh1aks"
+                src="images/photo.jpg"
                 alt=""
               />
             </div>
